# SciConcepts_project

./: README.md  import_dataframe.ipynb  import_to_SQL.ipynb  pyproject.toml  test_sciconcepts_project.py
