[tool.poetry]
name = "SciConcepts_project"
version = "0.1.0"
description = "Analysis of scientific concepts"
authors = ["Artem Chumachenko <chumachenko.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
